- added colors - aligned text - fixed note refreshw

--- a/css/app.css
+++ b/css/app.css
@@ -192,3 +192,6 @@ h1{
 	-o-transition: opacity 300ms linear 1s;
 	transition: opacity 300ms linear 1s;
 }
+svg g text tspan{
+	text-anchor:middle;
+}
